ncp-features-example/3.0.1-ingress-ssl-mode/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-ssl-mode
  namespace: ncp-feature
  labels:
    feature: ingress-ssl-mode 
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: tcp
  selector:
    feature: ingress-ssl-mode
