ncp-features-example/3.0.1-ingress-ssl-mode/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-ssl-mode
  namespace: ncp-feature
  annotations:
    ncp/ssl-mode: 'passthrough'
  labels:
    feature: ingress-ssl-mode   
spec:
  tls:
  - hosts:
    - ingress-ssl-mode.demo.corp.local
  rules:
  - host: ingress-ssl-mode.demo.corp.local
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-ssl-mode
          servicePort: 443
